src/objects/EC_QuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>EC_Question__c</fullName>
        <label>EC Question</label>
        <referenceTo>EC_Question__c</referenceTo>
        <relationshipLabel>EC QuestionResponses</relationshipLabel>
        <relationshipName>EC_QuestionResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Enterprise_Configuration__c</fullName>
        <label>Enterprise Configuration</label>
        <referenceTo>Enterprise_Configuration__c</referenceTo>
        <relationshipLabel>EC QuestionResponses</relationshipLabel>
        <relationshipName>EC_QuestionResponses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EnvironmentId__c</fullName>
        <label>Environment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <formula>TEXT(Enterprise_Configuration__r.Environment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseActivationStatus__c</fullName>
        <label>License Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <label>Machine Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SectionText__c</fullName>
        <label>SectionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <formula>TEXT(EC_Question__r.Section__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagingId__c</fullName>
        <label>Staging Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubsectionText__c</fullName>
        <label>SubsectionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection__c</fullName>
        <formula>EC_Question__r.Subsection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(EC_Question__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <formula>EC_Question__r.UID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EC QuestionResponse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Enterprise_Configuration__c</columns>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EC Question Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EC QuestionResponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>